# ai-agent-mvp

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 683bc4c24582_add_chunking_methods_and_breakpoint_.py  9ae2062eaac7_create_graph_tables.py  aae0b9688539_remove_unique_constraint_from_.py  b0f91ee7f793_add_rag_models_document_and_chunk.py  ba89c70aa082_alter_table.py  c1d2e3f4a5b6_add_collection_table_and_document_fk.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  graph.py
backend/app/api/v1/graph/: edge.py  graph.py  graph_history.py  node.py
backend/app/api/v1/rag/: chunk.py  collection.py  document.py
backend/app/core/: config.py  db.py  deps.py  exception.py  exception_handler.py  graph_runner.py  logging.py
backend/app/database/crud/graph/: edge.py  graph.py  graph_history.py  node.py
backend/app/database/models/: __init__.py  base.py
backend/app/nodes/: base.py  condition_node.py  input_node.py  merge_node.py  output_node.py  prompt_node.py  retrieval_node.py
backend/app/schemas/: base.py  enums.py  graph.py  pagination.py
backend/app/schemas/graph/: edge.py  graph.py  graph_history.py  node.py
backend/app/schemas/rag/: chunk.py  collection.py  document.py
backend/app/services/graph/: edge.py  graph.py  graph_history.py  node.py
backend/app/services/rag/: chunk.py  collection.py  document.py
backend/app/utils/: chunking.py  common.py  vector_store.py
backend/conf/: gunicorn_conf.py
k8s/: db.yaml  (+11 more)
(+40 files in other folders)
