[project]
name = "ai-agent-mvp-be"
version = "0.1.0"
description = "FastAPI server for ai-agent-mvp-be"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.17.6",
    "gunicorn==22.0.0",
    "sqlalchemy==2.0.31",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "typing-inspection==0.4.1",
    "pydantic-settings==2.7.0",
    "openai==1.109.1",
    "alembic==1.13.2",
    "black==24.8.0",
    "asyncpg==0.30.0",
    "greenlet==3.2.2",
    "langchain>=0.3.0",
    "langchain_openai==0.3.33",
    "langgraph>=0.2.20",
]